# Stanford-CS336

./: .gitignore  BPE.md  BPE_Tokeniser.ipynb  Communication_accounting.md  LLM Training a Transformer LM.ipynb  LLM Transformer Architecture.ipynb  LLM_Experiments.ipynb  LLM_Generating_text.ipynb  LLM_Training_loop.ipynb  README.md  adapters.py  pyproject.toml  requirements-notebooks.in  transformer_accounting.md  unicode1.py  unicode2.py
5D_Parallelism/: 1_DataParallelism.ipynb  2_PipelineParallelism.ipynb  3_TensorParallelism.ipynb  4_ContextParallelism.ipynb  5_ExpertParallelism.ipynb  README.md
DiffusionLanguageModel/: Custom_Final_Diffusion_LLM_from_scratch_TinyStories_Cosine_schedule.ipynb  Custom_Final_Diffusion_LLM_from_scratch_TinyStories_Cosine_schedule_Parallel.ipynb
GPT/: __init__.py  attention.py  attention_benchmarking.py  benchmarking.py  cross_entropy.py  ddp.py  decoding.py  distributed_benchmarking.py  embedding.py  flash_attention.py  flash_attention_benchmarking.py  linear.py  multihead_attention.py  naive_ddp.py  nvtx.py  optimization.py  rmsnorm.py  rotary.py  softmax.py  swiglu.py  training.py  transformer_block.py  transformer_lm.py
bpe_tokenizer/: __init__.py  cli.py  experiments.py  patterns.py  serialization.py  tokenizer.py  trainer.py
bpe_tokenizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: benchmark_attention.py  benchmark_distributed_all_reduce.py  benchmark_flash_attention.py  benchmark_naive_ddp.py  benchmark_transformer.py  create_5d_parallelism_notebooks.py  naive_ddp.py  (+3 more)
(+26 files in other folders)
