[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bpe-tokenizer"
version = "0.1.0"
description = "Production-oriented byte-level BPE tokenizer package for the CS336 assignment workspace."
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "regex>=2024.0",
]

[project.scripts]
bpe-tokenizer = "bpe_tokenizer.cli:main"

[tool.setuptools]
packages = ["bpe_tokenizer", "GPT"]
